# robot-framework-custom-structure

./: .gitignore  Dockerfile  README.md  manage_packages.sh  poetry_to_requirements.py  prepare_docker.sh  pyproject.toml  pyproject.toml.ci  requirements.txt  root_path.resource  run_tests.bat  run_tests.ps1  run_tests.sh  serve_results.sh  stop_vnc.sh
.devcontainer/: devcontainer.json
Libraries/Keywords/: AppWriteService.py  BrowserScripting.py  FileGenerator.py  HtmlParser.py  MailSac.py  PaymentCard.py  PhoneNumberLibrary.py  PyDate.py  RequestSender.py  RequestUtils.py  ResponseHandler.py  ResponseWrapper.py  RobotRequestsManager.py  SessionManager.py  SupabaseLibrary.py  TokenManager.py
Libraries/Scripts/: alert_system.js
Libraries/Utilities/: AlertSystem.py  BirthdateGenerator.py  CustomConditioning.py  DataStructure.py  DateUtils.py  EnhancedScreenshot.py  FileDirOperations.py  FileGenerator.py  Generators.py  IBANLibrary.py  Loggers.py  LogicalOperations.py  MathOperations.py  PathExtractor.py  PyDate.py  RandomDataGenerators.py  SaudiAddressGenerator.py  Secrets.py  StringOperations.py  StrongEncryption.py  URLHandler.py  VariableUtils.py  (+1 more)
POM/: __init__.robot
Resources/: __init__.robot
Tests/: __init__.robot
Utilities/: Assertions.resource  Base64.resource  Cookies.resource  CustomDateTime.resource  DynamicValues.resource  ExecutionConfiguration.resource  FileDirOperations.resource  LocalStorage.resource  Math.resource  Navigations.resource  PageSupport.resource  Random.resource  URLEncode.resource  VariableIdentifier.resource  pyString.resource
(+49 files in other folders)
